fix select text overflow style, close #338

--- a/style/components/select.less
+++ b/style/components/select.less
@@ -98,6 +98,7 @@
       display: block;
       overflow: hidden;
       text-overflow: ellipsis;
+      white-space: nowrap;
       padding-left: 10px;
       padding-right: 20px;
       line-height: 26px;
